--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Hunted Hippo, African Animal
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>This is the blog of one hunted hippo!</h1>
+	<p>Apart from wallowing about in rivers the hunted hippo can also be found <em>running from poachers</em> and occassionally eating them. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
